--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Connect"
+        android:text="@string/connect_button_string"
         android:id="@+id/connect_button"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
@@ -41,7 +41,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Info"
+        android:text="@string/info_button_string"
         android:id="@+id/info_button"
         android:layout_alignBottom="@+id/connect_button"
         android:layout_alignEnd="@+id/frameLayout" />
